# dagpar

./: .gitlab-ci.yml  CMakeLists.txt  README.md
data/: chukrut_quadcurve.dot  chukrut_quadcurve.txt
src/: executor.hpp  generator.hpp  graph.hpp  node.hpp  timer.hpp  utils.hpp
tests/: createdot.cpp  executeone.cpp  executeoneDF.cpp  graphstat.cpp  main.cpp
utests/: utestall.cpp  utestisdag.cpp
